boltffi_backend/tests/snapshots/swift__swift_target_renders_nullable_primitive_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/nullable_primitive_functions\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func maybeAdd(value: Int32?) -> UInt32? {
    let __boltffi_value_bytes = boltffiEncode { __boltffi_value_writer in __boltffi_value_writer.writeOptional(value) { writer, value in writer.writeI32(value) } }
    return __boltffi_value_bytes.withUnsafeBufferPointer { __boltffi_value_buffer in
        let __boltffi_result = boltffi_function_demo_maybe_add(__boltffi_value_buffer.baseAddress!, UInt(__boltffi_value_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readOptional { reader in reader.readU32() } }
    }
}
