boltffi_backend/tests/snapshots/swift__swift_target_renders_nullable_returned_callback_handles.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/nullable_callback_handle_return\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Listener: AnyObject {
    func onValue(value: UInt32) -> UInt32
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}
private protocol ListenerBridgeable: Listener {
    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle
}

private final class ListenerProxy: Listener, ListenerBridgeable {
    private let handle: BoltFFICallbackHandle

    init(_ handle: BoltFFICallbackHandle) {
        self.handle = handle
    }

    deinit {
        ListenerBridge.release(handle)
    }

    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle {
        ListenerBridge.clone(handle)
    }

    func onValue(value: UInt32) -> UInt32 {
        guard let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let invoke = vtable.pointee.on_value else {
            fatalError("missing callback vtable entry")
        }
        return invoke(handle.handle, value)
    }
}

private var __boltffi_listener_vtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        on_value: { handle, value in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.onValue(value: value)
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&__boltffi_listener_vtable)
    }()
    static func release(_ handle: BoltFFICallbackHandle) {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let free = vtable.pointee.free else { return }
        free(handle.handle)
    }

    static func clone(_ handle: BoltFFICallbackHandle) -> BoltFFICallbackHandle {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let clone = vtable.pointee.clone else {
            return BoltFFICallbackHandle(handle: 0, vtable: nil)
        }
        return BoltFFICallbackHandle(handle: clone(handle.handle), vtable: handle.vtable)
    }

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        if let bridgeable = impl as? ListenerBridgeable {
            return bridgeable._boltffiRetainedCallbackHandle()
        }
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
    static func wrap(_ handle: BoltFFICallbackHandle) -> any Listener {
        _ = register
        return ListenerProxy(handle)
    }
}

public func optionalBoxedListener() -> Listener? {
    let __boltffi_handle = boltffi_function_demo_optional_boxed_listener()
    return __boltffi_handle.handle == 0 ? nil : ListenerBridge.wrap(__boltffi_handle)
}

public func optionalSharedListener() -> Listener? {
    let __boltffi_handle = boltffi_function_demo_optional_shared_listener()
    return __boltffi_handle.handle == 0 ? nil : ListenerBridge.wrap(__boltffi_handle)
}
