boltffi_backend/tests/snapshots/swift__swift_target_renders_returned_callback_direct_vector_parameters.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_handle_direct_vector_parameter\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Listener: AnyObject {
    func process(values: [Int32]) -> UInt32
}

private final class ListenerWrapper {
    let impl: Listener

    init(_ impl: Listener) {
        self.impl = impl
    }
}
private protocol ListenerBridgeable: Listener {
    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle
}

private final class ListenerProxy: Listener, ListenerBridgeable {
    private let handle: BoltFFICallbackHandle

    init(_ handle: BoltFFICallbackHandle) {
        self.handle = handle
    }

    deinit {
        ListenerBridge.release(handle)
    }

    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle {
        ListenerBridge.clone(handle)
    }

    func process(values: [Int32]) -> UInt32 {
        guard let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let invoke = vtable.pointee.process else {
            fatalError("missing callback vtable entry")
        }
        return values.withUnsafeBufferPointer { __boltffi_values_buffer in
            return invoke(handle.handle, __boltffi_values_buffer.baseAddress, UInt(__boltffi_values_buffer.count))
        }
    }
}

private var __boltffi_listener_vtable: ___ListenerVTable = {
    ___ListenerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        process: { handle, values_ptr, values_len in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ListenerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            let __boltffi_values_count = Int(values_len)
            let __boltffi_values_value = __boltffi_values_count == 0 ? [] : Array(UnsafeBufferPointer(start: values_ptr!, count: __boltffi_values_count))
            return wrapper.impl.process(values: __boltffi_values_value)
        }
    )
}()

private enum ListenerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_listener(&__boltffi_listener_vtable)
    }()
    static func release(_ handle: BoltFFICallbackHandle) {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let free = vtable.pointee.free else { return }
        free(handle.handle)
    }

    static func clone(_ handle: BoltFFICallbackHandle) -> BoltFFICallbackHandle {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ListenerVTable.self),
              let clone = vtable.pointee.clone else {
            return BoltFFICallbackHandle(handle: 0, vtable: nil)
        }
        return BoltFFICallbackHandle(handle: clone(handle.handle), vtable: handle.vtable)
    }

    static func create(_ impl: Listener) -> BoltFFICallbackHandle {
        _ = register
        if let bridgeable = impl as? ListenerBridgeable {
            return bridgeable._boltffiRetainedCallbackHandle()
        }
        let wrapper = ListenerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_listener(handle)
    }
    static func wrap(_ handle: BoltFFICallbackHandle) -> any Listener {
        _ = register
        return ListenerProxy(handle)
    }
}

public func makeListener() -> Listener {
    return ListenerBridge.wrap(boltffi_function_demo_make_listener())
}
