boltffi_backend/tests/snapshots/swift__swift_target_renders_string_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/string_functions\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func echoString(message: String) -> String {
    let __boltffi_message_bytes = boltffiEncode { __boltffi_message_writer in __boltffi_message_writer.writeString(message) }
    return __boltffi_message_bytes.withUnsafeBufferPointer { __boltffi_message_buffer in
        let __boltffi_result = boltffi_function_demo_echo_string(__boltffi_message_buffer.baseAddress!, UInt(__boltffi_message_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readString() }
    }
}

public func echoStr(message: String) -> String {
    let __boltffi_message_bytes = boltffiEncode { __boltffi_message_writer in __boltffi_message_writer.writeString(message) }
    return __boltffi_message_bytes.withUnsafeBufferPointer { __boltffi_message_buffer in
        let __boltffi_result = boltffi_function_demo_echo_str(__boltffi_message_buffer.baseAddress!, UInt(__boltffi_message_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readString() }
    }
}
