boltffi_backend/tests/snapshots/swift__swift_target_returns_record_direct_vectors.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"direct_vector/record_vector_return\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Double
    public var y: Double

    public init(x: Double, y: Double) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public func points() -> [Point] {
    let __boltffi_result = boltffi_function_demo_points()
    defer { boltffi_free_buf(__boltffi_result) }
    guard __boltffi_result.len > 0, let __boltffi_result_ptr = __boltffi_result.ptr else { return [] }
    let __boltffi_result_count = Int(__boltffi_result.len) / MemoryLayout<___Point>.stride
    let __boltffi_result_raw = UnsafeRawPointer(__boltffi_result_ptr).assumingMemoryBound(to: ___Point.self)
    var __boltffi_result_value: [Point] = []
    __boltffi_result_value.reserveCapacity(__boltffi_result_count)
    for index in 0..<__boltffi_result_count {
        __boltffi_result_value.append(Point(fromC: __boltffi_result_raw[index]))
    }
    return __boltffi_result_value
}
